@@ -1,3 +1,9 @@
+2011-01-16 .50
+    * Added stalker_stalk_on_join option.  Turning this on will show previous
+    nicknames when a user joins "foo foo@bar has joined #perl ( foo, bar, blee
+    )"
+    Thanks to an anonymous submitter for the patch and suggestion.
+
 2010-10-09
     * Added channel sync event handling to replace who on join
     * Removed hide_who option (no longer needed)
